--- a/src/components/google-recaptcha.html
+++ b/src/components/google-recaptcha.html
@@ -3,13 +3,102 @@
         <div class="row">
             <h1>Google Recaptcha</h1>
         </div>
-
-        <div class="container-fluid">
-            <div class="col-12">
-                <div class="row justify-content-md-center">
-                    <recaptcha sitekey="YOUR_KEY" theme="light" callback="toggleRecaptchaValidate"></recaptcha>
-                </div>
+    </div>
+    <div class="container">
+      <div class="row">
+        <div class="col-md-12">
+          <form>
+            <div class="form-check">
+              <input class="form-check-input" type="checkbox" id="checkbox-auto" value="auto" checked.bind="checked">
+              <label class="form-check-label" for="checkbox-auto">
+                Activate Auto
+              </label>
             </div>
+            <div class="form-check">
+              <input class="form-check-input" type="checkbox" id="checkbox-remove-one" value="remove-one" checked.bind="checked">
+              <label class="form-check-label" for="checkbox-remove-one">
+                Hide One Recaptcha
+              </label>
+            </div>
+            <div class="form-check">
+              <input class="form-check-input" type="checkbox" id="checkbox-remove-all" value="remove-all" checked.bind="checked">
+              <label class="form-check-label" for="checkbox-remove-all">
+                Hide All Recaptcha
+              </label>
+            </div>
+          </form>
+        </div>
+      </div>
+    </div>
+     <div class="container" if.bind="!isRemoveAll">
+        <div class="row">
+            <h2>V2</h2>
+        </div>
+        <div class="row">
+          <div class="col-md-4">  
+            <recaptcha-v2 id.bind="idV2C1" sitekey.bind="recaptchaV2" value.bind="notARobotV2C1"></recaptcha-v2>
+            <span>Custom <button class="btn btn-sm btn-primary" click.trigger="publishResetV2C1()">reset</button>.</span>
+            <span if.bind="notARobotV2C1">Not a Robot!</span>
+            <span if.bind="!notARobotV2C1">Be gone Robot!</span>
+          </div>
+          <div class="col-md-4">
+            <recaptcha-v2 sitekey.bind="recaptchaV2" callback="callbackIAmHumanV2C2"></recaptcha-v2>
+            <span>Custom callback, see console.</span>
+          </div>
+          <div class="col-md-4" if.bind="renderedWithDelay">  
+            <recaptcha-v2 sitekey.bind="recaptchaV2" value.bind="notARobotV2C3"></recaptcha-v2>
+            <span>Delayed rendering (After at least one recaptcha was loaded).</span>
+            <span if.bind="notARobotV2C3">Not a Robot!</span>
+            <span if.bind="!notARobotV2C3">Be gone Robot!</span>
+          </div>
+        </div>
+    </div>
+    <div class="container" if.bind="!isRemoveAll">
+        <div class="row">
+            <h2>V2 - Invisible</h2>
+        </div>
+        <div class="row">
+          <div class="col-md-4">  
+            <recaptcha-v2-invisible auto.bind="isAuto" sitekey.bind="recaptchaV2Invisible" size="invisible" value.bind="notARobotV2IC1"></recaptcha-v2-invisible>
+            <span if.bind="notARobotV2IC1">Not a Robot!</span>
+            <span if.bind="!notARobotV2IC1">Be gone Robot!</span>
+          </div>
+          <div class="col-md-4">
+            <recaptcha-v2-invisible id.bind="idV2IC2" sitekey.bind="recaptchaV2Invisible" callback="callbackIAmHumanV2IC2" size="invisible"></recaptcha-v2-invisible>
+            <span>Custom <button class="btn btn-sm btn-primary" click.trigger="publishExecuteV2IC2()">trigger</button>.</span>
+            <span>Custom callback, see console.</span>
+          </div>
+          <div class="col-md-4">  
+            <recaptcha-v2-invisible id.bind="idV2IC3" sitekey.bind="recaptchaV2Invisible" size="invisible" value.bind="notARobotV2IC3"></recaptcha-v2-invisible>
+            <span>Custom <button class="btn btn-sm btn-primary" click.trigger="publishExecuteV2IC3()">trigger</button>.</span>
+            <span>Custom <button class="btn btn-sm btn-primary" click.trigger="publishResetV2IC3()">reset</button>.</span>
+            <span if.bind="notARobotV2IC3">Not a Robot!</span>
+            <span if.bind="!notARobotV2IC3">Be gone Robot!</span>
+          </div>
+        </div>
+    </div>
+    <div class="container" if.bind="!isRemoveAll">
+        <div class="row">
+            <h2>V3</h2>
+        </div>
+        <div class="row">
+          <div class="col-md-4">  
+            <recaptcha sitekey.bind="recaptcha" value.bind="notARobotv3_1" auto.bind="isAuto"></recaptcha>
+            <span if.bind="notARobotv3_1">Not a Robot!</span>
+            <span if.bind="!notARobotv3_1">Be gone Robot!</span>
+          </div>
+           <div class="col-md-4">
+            <recaptcha id.bind="idV3C2" sitekey.bind="recaptcha" value.bind="notARobotv3_2" action="login"></recaptcha>
+            <span>Custom <button click.trigger="publishExecuteV3C2()" class="btn btn-sm btn-primary">trigger</button>.</span>
+            <span if.bind="notARobotv3_2">Not a Robot!</span>
+            <span if.bind="!notARobotv3_2">Be gone Robot!</span>
+          </div>
+          <div class="col-md-4" if.bind="renderedWithDelay">  
+            <recaptcha sitekey.bind="recaptcha" value.bind="notARobotv3_3" action="social" auto="1"></recaptcha>
+            <span>Delayed rendering (After at least one recaptcha was loaded).</span>
+            <span if.bind="notARobotv3_3">Not a Robot!</span>
+            <span if.bind="!notARobotv3_3">Be gone Robot!</span>
+          </div>
         </div>
     </div>
 </template>
