added codemirror component

--- a/index.ejs
+++ b/index.ejs
@@ -6,6 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <base href="<%- htmlWebpackPlugin.options.metadata.baseUrl %>">
     <!-- imported CSS are concatenated and added automatically -->
+
+    <link rel="stylesheet" href="//fonts.googleapis.com/css?family=Roboto+Mono">
+    <link rel="stylesheet" href="//fonts.googleapis.com/css?family=Roboto:300,400,500">
+    <link rel="stylesheet" href="//fonts.googleapis.com/icon?family=Material+Icons">
+    <link rel="stylesheet" href="https://material.io/develop/css/codemirror.css">
   </head>
   <body aurelia-app="main">
   </body>
