--- a/src/components/google-recaptcha.html
+++ b/src/components/google-recaptcha.html
@@ -1,5 +1,5 @@
 <template>
-    <div class="container">
+    <div class="container-fluid">
         <div class="row">
             <h1>Google Recaptcha</h1>
         </div>
@@ -30,30 +30,62 @@
         </div>
       </div>
     </div>
-     <div class="container" if.bind="!isRemoveAll">
+     <div class="container-fluid" if.bind="!isRemoveAll">
         <div class="row">
-            <h2>V2</h2>
+            <h2>Recaptcha V2</h2>
         </div>
         <div class="row">
-          <div class="col-md-4">  
+          <div class="col-md-3">
+            <div>
+              <textarea class="codemirror"><recaptcha-v2
+  id.bind="idV2C1"
+  value.bind="notARobotV2C1"
+></recaptcha-v2></textarea>
+            </div>
+
             <recaptcha-v2 id.bind="idV2C1" value.bind="notARobotV2C1"></recaptcha-v2>
             <span>Custom <button class="btn btn-sm btn-primary" click.trigger="publishResetV2C1()">reset</button>.</span>
             <span if.bind="notARobotV2C1">Not a Robot!</span>
             <span if.bind="!notARobotV2C1">Be gone Robot!</span>
           </div>
-          <div class="col-md-4">
+          <div class="col-md-3">
+            <div>
+              <textarea class="codemirror"><recaptcha-v2
+  sitekey.bind="recaptchaV2"
+  callback="callbackIAmHumanV2C2"
+></recaptcha-v2></textarea>
+            </div>
+
             <recaptcha-v2 sitekey.bind="recaptchaV2" callback="callbackIAmHumanV2C2"></recaptcha-v2>
             <span>Custom callback, see console.</span>
           </div>
-          <div class="col-md-4" if.bind="renderedWithDelay">  
-            <recaptcha-v2 value.bind="notARobotV2C3"></recaptcha-v2>
+          <div class="col-md-3">
+            <div>
+              <textarea class="codemirror"><recaptcha-v2
+  value.bind="notARobotV2C3"
+></recaptcha-v2></textarea>
+            </div>
+
+            <recaptcha-v2 if.bind="renderedWithDelay" value.bind="notARobotV2C3"></recaptcha-v2>
+            <span>Delayed rendering (After at least one recaptcha was loaded).</span>
+            <span if.bind="notARobotV2C3">Not a Robot!</span>
+            <span if.bind="!notARobotV2C3">Be gone Robot!</span>
+          </div>
+          <div class="col-md-3">
+            <div>
+              <textarea class="codemirror"><recaptcha-v2
+    value.bind="notARobotV2C3"
+  ></recaptcha-v2></textarea>
+            </div>
+
+            <recaptcha-v2 if.bind="renderedWithDelay" value.bind="notARobotV2C3"></recaptcha-v2>
             <span>Delayed rendering (After at least one recaptcha was loaded).</span>
             <span if.bind="notARobotV2C3">Not a Robot!</span>
             <span if.bind="!notARobotV2C3">Be gone Robot!</span>
           </div>
         </div>
     </div>
-    <div class="container" if.bind="!isRemoveAll">
+    <div class="container-fluid" if.bind="!isRemoveAll">
         <div class="row">
             <h2>V2 - Invisible</h2>
         </div>
@@ -77,7 +109,7 @@
           </div>
         </div>
     </div>
-    <div class="container" if.bind="!isRemoveAll">
+    <div class="container-fluid" if.bind="!isRemoveAll">
         <div class="row">
             <h2>V3</h2>
         </div>
