--- a/src/components/google-recaptcha.html
+++ b/src/components/google-recaptcha.html
@@ -1,36 +1,104 @@
 <template>
-    <div class="container">
-        <div class="row">
-            <h1>Google Recaptcha</h1>
-        </div>
-    </div>
-    <div class="container">
+  <div class="container">
       <div class="row">
-        <div class="col-md-12">
-          <form>
-            <div class="form-check">
-              <input class="form-check-input" type="checkbox" id="checkbox-auto" value="auto" checked.bind="checked">
-              <label class="form-check-label" for="checkbox-auto">
-                Activate Auto
-              </label>
-            </div>
-            <div class="form-check">
-              <input class="form-check-input" type="checkbox" id="checkbox-remove-one" value="remove-one" checked.bind="checked">
-              <label class="form-check-label" for="checkbox-remove-one">
-                Hide One Recaptcha
-              </label>
-            </div>
-            <div class="form-check">
-              <input class="form-check-input" type="checkbox" id="checkbox-remove-all" value="remove-all" checked.bind="checked">
-              <label class="form-check-label" for="checkbox-remove-all">
-                Hide All Recaptcha
-              </label>
-            </div>
-          </form>
-        </div>
+          <div class="col-md-12">
+              <h1>Google Recaptcha</h1>
+          </div>
+      </div>
+  </div>
+  <div class="container">
+    <div class="row">
+      <div class="col-md-12">
+        <h2>Dynamic options</h2>
+        <hr>
+        <form>
+          <div class="form-check">
+            <input class="form-check-input" type="checkbox" id="checkbox-auto" value="auto" checked.bind="checked">
+            <label class="form-check-label" for="checkbox-auto">
+              Activate Auto
+            </label>
+          </div>
+        </form>
+        <hr>
       </div>
     </div>
-     <div class="container" if.bind="!isRemoveAll">
+  </div>
+
+  <div class="container">
+    <div class="row">
+      <div class="col-md-4">
+        <h3>reCAPTCHA v2</h3>
+      </div>
+      <div class="col-md-4">
+        <h3>reCAPTCHA v2 invis</h3>
+      </div>
+      <div class="col-md-4">
+        <h3>reCAPTCHA v3</h3>
+      </div>
+    </div>
+
+    <div class="row">
+      <div class="col-md-12">
+        <hr>
+        <p>Simple reCAPTCHA plugins, followed by reset buttons to simulate reset event.</p>
+        <hr>
+      </div>
+    </div>
+
+    <div class="row">
+      <div class="col-md-4">
+        <!-- v2 checkbox simple, just reset -->
+        <div>
+          <textarea class="codemirror"><recaptcha-v2
+  id.bind="idSimpleV2"
+  value.bind="tokenSimpleV2"
+></recaptcha-v2></textarea>
+        </div>
+
+        <span>Custom <a href='javascript:;' click.trigger="resetSimpleV2()">reset</a>.</span>
+        <recaptcha-v2 id.bind="idSimpleV2" value.bind="tokenSimpleV2"></recaptcha-v2>
+
+        <span if.bind="tokenSimpleV2" class="badge badge-success">Not a Robot!</span>
+        <span if.bind="!tokenSimpleV2" class="badge badge-danger">Be gone Robot!</span>
+      </div>
+      <div class="col-md-4">
+        <!-- v2 invisible simple, just reset -->
+        <div>
+            <textarea class="codemirror"><recaptcha-v2-invisible
+  id.bind="idSimpleV2i"
+  value.bind="tokenSimpleV2i"
+></recaptcha-v2-invisible></textarea>
+          </div>
+
+          <span>Custom <a href='javascript:;' click.trigger="executeSimpleV2i()">trigger</a>.</span>
+          <span>Custom <a href='javascript:;' click.trigger="resetSimpleV2i()">reset</a>.</span>
+          <recaptcha-v2-invisible id.bind="idSimpleV2i" value.bind="tokenSimpleV2i"></recaptcha-v2-invisible>
+
+          <span if.bind="tokenSimpleV2i" class="badge badge-success">Not a Robot!</span>
+          <span if.bind="!tokenSimpleV2i" class="badge badge-danger">Be gone Robot!</span>
+      </div>
+      <div class="col-md-4">
+        <!-- v2 invisible simple, just reset -->
+        <div>
+          <textarea class="codemirror"><recaptcha
+  id.bind="idSimpleV3"
+  value.bind="tokenSimpleV3"
+></recaptcha></textarea>
+        </div>
+
+        <span>Custom <a href='javascript:;' click.trigger="executeSimpleV3()">trigger</a>.</span>
+        <!-- <span>Custom <a href='javascript:;' click.trigger="resetSimpleV3()">reset</a>.</span> -->
+        <recaptcha id.bind="idSimpleV3" value.bind="tokenSimpleV3"></recaptcha>
+
+        <span if.bind="tokenSimpleV3" class="badge badge-success">Not a Robot!</span>
+        <span if.bind="!tokenSimpleV3" class="badge badge-danger">Be gone Robot!</span>
+      </div>
+    </div>
+
+  </div>
+
+
+    <!-- <div class="container" if.bind="!isRemoveAll">
         <div class="row">
           <div class="col-md-12">
             <h2>Recaptcha V2</h2>
@@ -39,18 +107,7 @@
         </div>
         <div class="row">
           <div class="col-md-6">
-            <div>
-              <textarea class="codemirror"><recaptcha-v2
-  id.bind="idV2C1"
-  value.bind="notARobotV2C1"
-  callback-expired="callbackIExpiredV2C1"
-></recaptcha-v2></textarea>
-            </div>
-
-            <recaptcha-v2 id.bind="idV2C1" value.bind="notARobotV2C1"></recaptcha-v2>
-            <span if.bind="notARobotV2C1">Not a Robot!</span>
-            <span if.bind="!notARobotV2C1">Be gone Robot!</span>
-            <span>Custom <a href='javascript:;' click.trigger="publishResetV2C1()">reset</a>.</span>
+            
           </div>
           <div class="col-md-6">
             <div>
@@ -246,5 +303,5 @@
             <span if.bind="!notARobotv3_3">Be gone Robot!</span>
           </div>
         </div>
-    </div>
+    </div> -->
 </template>
